Bug #13300
mlxcx_cq_setup() doesn't take required locks for ASSERTs
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
On debug, a user saw a panic occur in mlxcx_arm_cq()
because they didn't have the mlcq_arm_mtx
lock held. This only really blows up on debug builds. The reason that this happens and isn't so bad is that the setup code path didn't grab the muetx that was added for this purpose. However, all the code paths that matter once the device is up, are doing so.
I put together a patch and they confirmed that it fixed the problem that they had.
Updated by Robert Mustacchi 4 months ago
- Subject changed from mlxcx_cq_setup() doesn't take requierd locks for ASSERTs to mlxcx_cq_setup() doesn't take required locks for ASSERTs
Updated by Electric Monk 4 months ago
- Status changed from New to Closed
- % Done changed from 80 to 100
git commit 7fdea60d55a95f0e46066fd021c4ef1b1321bafc
commit 7fdea60d55a95f0e46066fd021c4ef1b1321bafc Author: Robert Mustacchi <rm@fingolfin.org> Date: 2020-11-17T16:05:23.000Z 13300 mlxcx_cq_setup() doesn't take required locks for ASSERTs Reviewed by: Paul Winder <paul@winder.uk.net> Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Alex Wilson <alex@cooperi.net> Approved by: Garrett D'Amore <garrett@damore.org>