13300 mlxcx_cq_setup() doesn't take required locks for ASSERTs Reviewed by: Paul Winder <paul@winder.uk.net> Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Alex Wilson <alex@cooperi.net> Approved by: Garrett D'Amore <garrett@damore.org>